# FootAI

./: .gitignore  FootAI Main.py  FootAIGUI.py  README.md  config.yaml  pyproject.toml  requirements.txt
analyze/: analyze.py  analyze_copy.py  analyze_input.py
data/: data_3classes.yaml
data/train/: labels.cache
data/valid/: labels.cache
logger/: logger.py
pitch_keypoints_tracking/: __init__.py  pitch_drawer.py  team_heatmap.py  view_transformation.py
player_tracking/: BallInterpolator.py  PassDetector.py  PossessionCalculator.py  embedding_assigner.py  fast_team_assigner.py  tracker.py
scripts/: __init__.py  analyze_input.py  pretrain_model.py  test_model.py  train_model_retina.ipynb  train_model_yolo.py  train_yolo.py  validate_model.py  yolo11x.pt
scripts/models/FootAI_yolo11/: args.yaml  results.csv
scripts/models/FootAI_yolo11/weights/: best.pt  last.pt
scripts/models/FootAI_yolo11l/: events.out.tfevents.1760941303.de2ef155f1bc.914.0  results.csv
scripts/models/FootAI_yolo11l/weights/: best.pt  last.pt
scripts/models/FootAI_yolo11l_200epochs/: args.yaml  results.csv
scripts/models/FootAI_yolo11x/: args.yaml  events.out.tfevents.1760899278.a3944d4c0670.1099.0  events.out.tfevents.1762077785.f7eeeaf7d75f.16352.0  results.csv
scripts/models/PitchKeypoints_Yolo/: best.pt  last.pt
scripts/models/RetinaNet/: model_best.pth  model_final1.pth  model_ret.pth
segmentation/: frames.py
tracking/: EmbeddingTeamAssigner.py  HeuristicTeamAssigner.py  PossesionCalculator.py  in2teams.py  tracking_objects.py
(+6 files in other folders)
