[project]
name = "footai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black==25.12.0",
    "cloudpickle==3.1.2",
    "fairscale==0.4.13",
    "fvcore==0.1.5.post20221221",
    "hydra-core==1.3.2",
    "iopath==0.1.9",
    "matplotlib==3.10.8",
    "mmcv==2.2.0",
    "mmdet==3.3.0",
    "numpy==2.4.0",
    "omegaconf==2.3.0",
    "onnx==1.19.1",
    "opencv-contrib-python==4.10.0.84",
    "opencv-python==4.10.0.84",
    "packaging==25.0",
    "pillow==12.1.0",
    "pycocotools==2.0.10",
    "pygments==2.19.2",
    "pyyaml==6.0.3",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "setuptools==44.1.1",
    "shapely==2.1.2",
    "supervision==0.27.0",
    "tabulate==0.9.0",
    "termcolor==3.3.0",
    "timm==1.0.24",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "ultralytics==8.3.231",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
